[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acc"
version = "0.0.1"
authors = [
  { name="Joss Appleton-Fox", email="jossappletonfox@protonmail.com" },
]
description = "A simple accounting tool for tracking income/expenditures."
readme = "README.md"
requires-python = ">=3.8"
